update build script for revise jacoco task